[HaRepacker] move animation preview to XNA window

--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -382,21 +382,17 @@
     <Compile Include="MapEditor\UndoRedo\UndoRedoAction.cs" />
     <Compile Include="MapEditor\UndoRedo\UndoRedoBatch.cs" />
     <Compile Include="MapEditor\UserObjectsManager.cs" />
-    <Compile Include="MapSimulator\Objects\FieldObject\BackgroundItem.cs" />
-    <Compile Include="MapSimulator\DX\IDXObject.cs" />
-    <Compile Include="MapSimulator\DX\DXSpineObject.cs" />
-    <Compile Include="MapSimulator\Objects\BaseItem.cs" />
-    <Compile Include="MapSimulator\Objects\FieldObject\MobItem.cs" />
-    <Compile Include="MapSimulator\Objects\FieldObject\TooltipItem.cs" />
-    <Compile Include="MapSimulator\Objects\UIObject\MinimapItem.cs" />
-    <Compile Include="MapSimulator\Objects\UIObject\MouseCursorItem.cs" />
-    <Compile Include="MapSimulator\Objects\FieldObject\NpcItem.cs" />
+    <Compile Include="MapSimulator\MapObjects\FieldObject\BackgroundItem.cs" />
+    <Compile Include="MapSimulator\MapObjects\FieldObject\MobItem.cs" />
+    <Compile Include="MapSimulator\MapObjects\FieldObject\TooltipItem.cs" />
+    <Compile Include="MapSimulator\MapObjects\UIObject\MinimapItem.cs" />
+    <Compile Include="MapSimulator\MapObjects\UIObject\MouseCursorItem.cs" />
+    <Compile Include="MapSimulator\MapObjects\FieldObject\NpcItem.cs" />
     <Compile Include="MapSimulator\MapSimulator.cs" />
     <Compile Include="MapSimulator\MapSimulatorLoader.cs" />
-    <Compile Include="MapSimulator\MapRenderResolution.cs" />
     <Compile Include="GUI\TabItemContainer.cs" />
-    <Compile Include="MapSimulator\Objects\FieldObject\PortalItem.cs" />
-    <Compile Include="MapSimulator\Objects\FieldObject\ReactorItem.cs" />
+    <Compile Include="MapSimulator\MapObjects\FieldObject\PortalItem.cs" />
+    <Compile Include="MapSimulator\MapObjects\FieldObject\ReactorItem.cs" />
     <Compile Include="MapSimulator\TexturePool.cs" />
     <Compile Include="MapSimulator\UIFrameHelper.cs" />
     <Compile Include="CustomControls\ColorDialog.xaml.cs">
@@ -524,7 +520,6 @@
     <Compile Include="MapEditor\Instance\ISnappable.cs" />
     <Compile Include="MapEditor\Layer.cs" />
     <Compile Include="MapEditor\Input\Mouse.cs" />
-    <Compile Include="MapSimulator\DX\DXObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Collections\AnchorEnumerator.cs" />
