--- a/HaSharedLirary/HaSharedLibrary.csproj
+++ b/HaSharedLirary/HaSharedLibrary.csproj
@@ -86,6 +86,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Render\BaseDXDrawableItem.cs" />
     <Compile Include="GUI\ChangeableTextBox.xaml.cs">
       <DependentUpon>ChangeableTextBox.xaml</DependentUpon>
     </Compile>
@@ -101,6 +102,10 @@
     <Compile Include="GUI\SpineAnimationWindow.cs" />
     <Compile Include="kernel32.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Render\DX\DXObject.cs" />
+    <Compile Include="Render\DX\DXSpineObject.cs" />
+    <Compile Include="Render\DX\IDXObject.cs" />
+    <Compile Include="Render\RenderResolution.cs" />
     <Compile Include="user32.cs" />
     <Compile Include="Util\BitmapHelper.cs" />
     <Compile Include="Util\ScreenDPIUtil.cs" />
