--- a/HaSharedLibrary/HaSharedLibrary.csproj
+++ b/HaSharedLibrary/HaSharedLibrary.csproj
@@ -24,6 +24,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x64</PlatformTarget>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -106,6 +107,9 @@
     <Compile Include="Render\DX\DXSpineObject.cs" />
     <Compile Include="Render\DX\IDXObject.cs" />
     <Compile Include="Render\RenderResolution.cs" />
+    <Compile Include="SharpApng\SharpApng.cs" />
+    <Compile Include="SharpApng\SharpApngBasicWrapper.cs" />
+    <Compile Include="SharpApng\SharpApngFrame.cs" />
     <Compile Include="user32.cs" />
     <Compile Include="Util\BitmapHelper.cs" />
     <Compile Include="Util\ScreenDPIUtil.cs" />
