--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -263,6 +263,12 @@
     <Compile Include="GUI\ManageUserObjects.Designer.cs">
       <DependentUpon>ManageUserObjects.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\MapPhysicsEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\MapPhysicsEditor.Designer.cs">
+      <DependentUpon>MapPhysicsEditor.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\New.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -635,6 +641,9 @@
     <EmbeddedResource Include="GUI\ManageUserObjects.resx">
       <DependentUpon>ManageUserObjects.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\MapPhysicsEditor.resx">
+      <DependentUpon>MapPhysicsEditor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\New.resx">
       <DependentUpon>New.cs</DependentUpon>
     </EmbeddedResource>
@@ -833,6 +842,7 @@
     <Content Include="HaLogo\HaLogo48.png" />
     <Content Include="HaLogo\HaLogo512.png" />
     <Content Include="HaLogo\HaLogo64.png" />
+    <Resource Include="Images\box_edit-big.png" />
     <None Include="Resources\placeholder.bmp" />
   </ItemGroup>
   <ItemGroup />
