--- a/HaRepacker/packages.config
+++ b/HaRepacker/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
+  <package id="AvalonEdit" version="6.0.1" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
   <package id="MonoGame.Framework.WindowsDX" version="3.8.0.1641" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
