[HaCreator] Dump unsupported 'info' properties back when saving
this should fix some of the issues with newer version of MapleStory in the short term, until they all get sorted out

--- a/MapleLib/MapleLib.csproj
+++ b/MapleLib/MapleLib.csproj
@@ -212,6 +212,8 @@
     <Compile Include="WzLib\WzStructure\Data\MapConstants.cs" />
     <Compile Include="WzLib\WzStructure\Data\FieldType.cs" />
     <Compile Include="WzLib\WzStructure\Data\ItemTypes.cs" />
+    <Compile Include="WzLib\WzStructure\Data\MapStructure\AutoLieDetector.cs" />
+    <Compile Include="WzLib\WzStructure\Data\MapStructure\TimeMob.cs" />
     <Compile Include="WzLib\WzStructure\Data\MapType.cs" />
     <Compile Include="WzLib\WzStructure\Data\PortalType.cs" />
     <Compile Include="WzLib\WzStructure\Data\FieldLimitType.cs" />
