[HaRepacker] Fix blurry image rendered on the image preview window
ref https://stackoverflow.com/questions/5645274/image-in-wpf-getting-blurry/5648419

dpi issue

--- a/HaRepacker/Harepacker-resurrected.csproj
+++ b/HaRepacker/Harepacker-resurrected.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Comparer\SemiNumericComparer.cs" />
     <Compile Include="Comparer\TreeViewNodeSorter.cs" />
     <Compile Include="Converter\CheckboxToBorderTransparencyConverter.cs" />
+    <Compile Include="Converter\ImageZoomSliderConverter.cs" />
     <Compile Include="GUI\ContextMenuManager.cs" />
     <Compile Include="Converter\CheckboxToVisibilityConverter.cs" />
     <Compile Include="Converter\ImageSizeDoubleToIntegerConverter.cs" />
