--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -391,9 +391,13 @@
     <Compile Include="MapSimulator\MapObjects\FieldObject\BackgroundItem.cs" />
     <Compile Include="MapSimulator\MapObjects\FieldObject\MobItem.cs" />
     <Compile Include="MapSimulator\MapObjects\FieldObject\TooltipItem.cs" />
+    <Compile Include="MapSimulator\MapObjects\UIObject\UIObject.cs" />
+    <Compile Include="MapSimulator\MapObjects\UIObject\UIObjectState.cs" />
+    <Compile Include="MapSimulator\MapObjects\UIObject\IUIObjectEvents.cs" />
     <Compile Include="MapSimulator\MapObjects\UIObject\MinimapItem.cs" />
     <Compile Include="MapSimulator\MapObjects\UIObject\MouseCursorItem.cs" />
     <Compile Include="MapSimulator\MapObjects\FieldObject\NpcItem.cs" />
+    <Compile Include="MapSimulator\MapObjects\UIObject\UIObjectViewModelBase.cs" />
     <Compile Include="MapSimulator\MapSimulator.cs" />
     <Compile Include="MapSimulator\MapSimulatorLoader.cs" />
     <Compile Include="GUI\TabItemContainer.cs" />
@@ -706,10 +710,6 @@
     <EmbeddedResource Include="Properties\Resources.zh-CHT.resx" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\EmptyKeys.UIEngine\EmptyKeys.UserInterface.MonoGame\EmptyKeys.UserInterface.MonoGame.Standard.csproj">
-      <Project>{30797d0b-0635-4b60-a591-45bbb9de7928}</Project>
-      <Name>EmptyKeys.UserInterface.MonoGame.Standard</Name>
-    </ProjectReference>
     <ProjectReference Include="..\HaRepacker\Harepacker-resurrected.csproj">
       <Project>{0b7155ef-1eb0-4fae-ba56-8064cbaf2bea}</Project>
       <Name>Harepacker-resurrected</Name>
@@ -825,6 +825,9 @@
     </PackageReference>
     <PackageReference Include="MonoGame.Framework.WindowsDX">
       <Version>3.8.0.1641</Version>
+    </PackageReference>
+    <PackageReference Include="NAudio">
+      <Version>1.10.0</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
