--- a/HaSharedLibrary/packages.config
+++ b/HaSharedLibrary/packages.config
@@ -1,7 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net48" />
   <package id="MonoGame.Framework.WindowsDX" version="3.8.0.1641" targetFramework="net48" />
-  <package id="NAudio" version="1.10.0" targetFramework="net472" />
+  <package id="NAudio" version="2.0.0" targetFramework="net48" />
+  <package id="NAudio.Asio" version="2.0.0" targetFramework="net48" />
+  <package id="NAudio.Core" version="2.0.0" targetFramework="net48" />
+  <package id="NAudio.Midi" version="2.0.0" targetFramework="net48" />
+  <package id="NAudio.Wasapi" version="2.0.0" targetFramework="net48" />
+  <package id="NAudio.WinForms" version="2.0.0" targetFramework="net48" />
+  <package id="NAudio.WinMM" version="2.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="SharpDX" version="4.2.0" targetFramework="net48" />
   <package id="SharpDX.Direct2D1" version="4.2.0" targetFramework="net48" />
@@ -12,4 +19,6 @@
   <package id="SharpDX.MediaFoundation" version="4.2.0" targetFramework="net48" />
   <package id="SharpDX.XAudio2" version="4.2.0" targetFramework="net48" />
   <package id="SharpDX.XInput" version="4.2.0" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
 </packages>
