[MapleLib] squish lib for decompression of some WzPngProperty image (DXT3, DXT5)
todo: compression & more

--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -124,7 +124,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>92BDF5A49B95221059718A85DF060FA1DFD1B7CE</ManifestCertificateThumbprint>
