--- a/MapleLib/packages.config
+++ b/MapleLib/packages.config
@@ -19,6 +19,10 @@
   <package id="SharpDX.MediaFoundation" version="4.2.0" targetFramework="net48" />
   <package id="SharpDX.XAudio2" version="4.2.0" targetFramework="net48" />
   <package id="SharpDX.XInput" version="4.2.0" targetFramework="net48" />
+  <package id="System.Drawing.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
 </packages>
