--- a/MapleLib/packages.config
+++ b/MapleLib/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="lz4net" version="1.0.15.93" targetFramework="net48" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net48" />
   <package id="MonoGame.Framework.WindowsDX" version="3.8.0.1641" targetFramework="net48" />
   <package id="NAudio" version="2.0.0" targetFramework="net48" />
