[MapleLib] Rolling back changes from prior commit with v230 gms support
https://github.com/lastbattle/Harepacker-resurrected/commit/05245dcbef116d9ea8e5142f6be86abb6a1201d1

--- a/MapleLib/MapleLib.csproj
+++ b/MapleLib/MapleLib.csproj
@@ -275,6 +275,7 @@
     <Compile Include="WzLib\WzStructure\Data\PortalType.cs" />
     <Compile Include="WzLib\WzStructure\Data\FieldLimitType.cs" />
     <Compile Include="WzLib\WzStructure\Data\QuestState.cs" />
+    <Compile Include="WzLib\WzStructure\Enums\WzDirectoryType.cs" />
     <Compile Include="WzLib\WzStructure\Foothold.cs" />
     <Compile Include="WzLib\WzStructure\InfoTool.cs" />
     <Compile Include="WzLib\WzStructure\MapInfo.cs" />
