[HaRepacker+HaCreator] combined the WzFileManager of both projects into a unified class
- Lots of testing & cleanup to do still... will refractor at a later date
- Fix wzfilemanager -- 64 bit needs to be automatically detected

--- a/MapleLib/MapleLib.csproj
+++ b/MapleLib/MapleLib.csproj
@@ -233,6 +233,7 @@
     <Compile Include="WzLib\WzFileParseStatus.cs" />
     <Compile Include="WzLib\WzImageProperty.cs" />
     <Compile Include="WzLib\WzImageResource.cs" />
+    <Compile Include="WzLib\WzMainDirectory.cs" />
     <Compile Include="WzLib\WzObject.cs" />
     <Compile Include="WzLib\Util\WzBinaryReader.cs" />
     <Compile Include="WzLib\Util\WzBinaryWriter.cs" />
