--- a/UnitTest_WzFile/UnitTest_WzFile.csproj
+++ b/UnitTest_WzFile/UnitTest_WzFile.csproj
@@ -100,6 +100,9 @@
     <None Include="WzFiles\Common\TamingMob_SEA_211.wz">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="WzFiles\Common\TMS_113_Item.wz">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="WzFiles\Hotfix\Data.wz">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
